src/test/resources/private/typechecking/fail/constructor/fail01.jova
class Test {

  Test() {
  }

  Test1() {
  }


}